--- a/frontend/src/components/UI/Card/Card.module.css
+++ b/frontend/src/components/UI/Card/Card.module.css
@@ -1,5 +1,5 @@
 .card-container { 
-   width: 400px;
+   width: 250px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    margin: 10px;
 }
@@ -11,6 +11,6 @@
 }
 
 .card-header {
-  height: 40px;
-  background-color: darkorange;
+  height: 5px;
+  background-color: var(--orangeColor);
 }
