--- a/frontend/src/components/UI/Card/Card.module.css
+++ b/frontend/src/components/UI/Card/Card.module.css
@@ -7,9 +7,14 @@
 .card-row {
     background-color: white;
     color: black;
-    padding: 10px;
+    padding: 3px;
+  }
+  
+.card-row, ul, li {
+  margin-left: 0;
+  text-align: start;
+  
 }
-
 .card-header {
   height: 5px;
   background-color: var(--orangeColor);
