--- a/frontend/src/components/UI/Footer/Footer.module.css
+++ b/frontend/src/components/UI/Footer/Footer.module.css
@@ -3,8 +3,12 @@
   width: 100vw;
   height: 15vh;
   border: 2px solid #F8F8F8;
+  display: flex;
 }
 
 .footer-ul-info {
+  width: 50%;
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
