--- a/frontend/src/components/UI/Card/Card.module.css
+++ b/frontend/src/components/UI/Card/Card.module.css
@@ -1,21 +1,25 @@
-.card-container { 
-   width: 250px;
-   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-   margin: 10px;
-}
+  .card-container { 
+    width: 250px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin: 10px;
+  }
 
-.card-row {
+  .card-row {
     background-color: white;
     color: black;
     padding: 3px;
   }
-  
-.card-row, ul, li {
-  margin-left: 0;
-  text-align: start;
-  
-}
-.card-header {
-  height: 5px;
-  background-color: var(--orangeColor);
-}
+    
+  .card-row, ul, li {
+    margin-left: 0;
+    text-align: start;
+  }
+
+  .card-detail {
+    font-weight: lighter;
+    text-transform: capitalize;
+  }
+  .card-header {
+    height: 5px;
+    background-color: var(--orangeColor);
+  }
