--- a/frontend/src/components/UI/Footer/Footer.module.css
+++ b/frontend/src/components/UI/Footer/Footer.module.css
@@ -1,14 +1,20 @@
 .footer-container {
   box-sizing: border-box;
   width: 100vw;
-  height: 15vh;
-  border: 2px solid #F8F8F8;
+  height: 8vh;
   display: flex;
+  border-bottom: 2px solid #F8F8F8;
 }
 
 .footer-ul-info {
   width: 50%;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  align-items: start;
+  justify-content: space-around;
+}
+
+.rights-title {
+  display: flex;
+  justify-content: center;
+
 }
