--- a/frontend/src/components/UI/Navbar/Navbar.module.css
+++ b/frontend/src/components/UI/Navbar/Navbar.module.css
@@ -3,18 +3,26 @@
   width: 100vw;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   border: 2px solid #F8F8F8;
 }
+
+.nav-logo {
+  width: 70%;
+  display: flex; 
+  justify-content: start;
+  padding-left: 5px;
+}
+
 
 .nav-ul {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: space-around;
+  justify-content: flex-end;
 }
 .nav-ul li:first-child{ 
-  font-weight: bold;
+  font-weight: bolder;
 }
 .nav-link, a {
   text-transform: capitalize; 
